--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,14 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- para pegar descrição de erro inserção sql - aula 5.4. Validando inconsistências 
+			<version>3.4</version> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
