--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 
+        <!-- Dependencia para classes metamodel utilizada nas consultas jpa -->
+        <!--
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+        </dependency>
+        -->
 	</dependencies>
 
 	<build>
