--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+		<dependency>
+		    <groupId>org.springframework.security.oauth</groupId>
+		    <artifactId>spring-security-oauth2</artifactId>
+		    <version>2.4.1.RELEASE</version>
+		</dependency>
+		
         <!-- Dependencia para classes metamodel utilizada nas consultas jpa -->
         <!--
         <dependency>
