--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
 		    <version>2.4.1.RELEASE</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-jwt</artifactId>
+		    <version>1.1.1.RELEASE</version>
+		</dependency>
+		
         <!-- Dependencia para classes metamodel utilizada nas consultas jpa -->
         <!--
         <dependency>
