--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.password=321654
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.main.allow-bean-definition-overriding=true
 
 spring.jackson.date-format=yyyy-MM-dd
