--- a/pom.xml
+++ b/pom.xml
@@ -122,8 +122,15 @@
 		 <dependency> 
 		 	<groupId>org.hibernate</groupId> 
 		 	<artifactId>hibernate-jpamodelgen</artifactId>
-		 </dependency> 
-		 
+		 </dependency>
+
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>
+		 		spring-boot-configuration-processor
+		 	</artifactId>
+		 	<optional>true</optional>
+		 </dependency>
 	</dependencies>
 
 	<build>
