--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.main.allow-bean-definition-overriding=true
 
 spring.jackson.date-format=yyyy-MM-dd
+
+algamoney.seguranca.enable-https=false
