--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<artifactId>algamoney-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>algamoney-api</name>
-	<description>Projeto para api aula spring - Wélyqrson</description>
+	<description>Projeto para api aula spring - Welyqrson</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -121,7 +121,8 @@
 		<!-- Dependencia para classes metamodel utilizada nas consultas jpa -->
 		 <dependency> 
 		 	<groupId>org.hibernate</groupId> 
-		 	<artifactId>hibernate-jpamodelgen</artifactId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+			<scope>provided</scope>
 		 </dependency>
 
 		 <dependency>
@@ -142,41 +143,17 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
-			</plugin>
-
-			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>11</source>
 					<target>11</target>
 					<failOnError>false</failOnError>
-					<generatedSourcesDirectory>src/main/java</generatedSourcesDirectory>
+					<generatedSourcesDirectory>src/main/java</generatedSourcesDirectory> 
 				</configuration>
 
 
 			</plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<configuration>
-					<!-- put your configurations here -->
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-      
 		</plugins>
 	</build>
 
