--- a/pom.xml
+++ b/pom.xml
@@ -118,12 +118,13 @@
 			<version>1.1.1.RELEASE</version>
 		</dependency>
 
-		<!-- Dependencia para classes metamodel utilizada nas consultas jpa -->
+		<!-- Dependencia para classes metamodel utilizada nas consultas jpa 
 		 <dependency> 
 		 	<groupId>org.hibernate</groupId> 
 			<artifactId>hibernate-jpamodelgen</artifactId>
 			<scope>provided</scope>
 		 </dependency>
+			-->
 
 		 <dependency>
 		 	<groupId>org.springframework.boot</groupId>
