--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.main.allow-bean-definition-overriding=true
 
 spring.jackson.date-format=yyyy-MM-dd
 
+spring.profiles.active=oauth-security
