--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.jpa.database=mysql
+spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=amaral
-spring.datasource.password=321654
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
-spring.main.allow-bean-definition-overriding=true
-
-spring.jackson.date-format=yyyy-MM-dd
 
 spring.profiles.active=oauth-security
+
+spring.profiles.group.prod=oauth-security
